# Co.Meet-side

./: .gitignore  pyproject.toml
comeet/: settings.py  urls.py
